@@ -39,7 +39,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: ssh.c,v 1.143 2001/09/20 13:50:40 markus Exp $");
+RCSID("$OpenBSD: ssh.c,v 1.144 2001/09/24 03:38:58 stevesk Exp $");
 
 #include <openssl/evp.h>
 #include <openssl/err.h>
@@ -265,8 +265,7 @@ main(int ac, char **av)
 	int dummy;
 	uid_t original_effective_uid;
 	extern int optopt;
-	extern int optind;
-	extern int optreset;
+	extern int optind, optreset;
 	extern char *optarg;
 
 	__progname = get_progname(av[0]);
