@@ -1,4 +1,8 @@
 20010923
+ - (bal) updated ssh.c to mirror minor getopts 'extern int' formating done
+   by stevesk@
+
+20010923
  - (bal) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/09/23 11:09:13
      [authfile.c]
